# LibBSD

./: .gitignore  CMakeLists.txt  README.md  SConstruct  makefile.gcc  makefile.gcc.aarch64
common/: bsd_def.h  bsd_errno.h  bsd_osal.h  bsd_util.h
compat/: bsd_compat.h  bsd_stub.h
compat/freebsd/local/: acpi_bus_if.c  acpi_bus_if.h  acpi_if.c  acpi_if.h  bus_if.c  device_if.c  device_if.h  ofw_bus_if.c  ofw_bus_if.h  ofw_if.c  pcib_if.h
compat/freebsd/machine/: bus.h  intr.h  ofw_machdep.h
compat/freebsd/machine/aarch64/: armreg.h  cpufunc.h  gdb_machdep.h  kdb.h  resource.h
core/: bsd_core.c  bsd_core.h
freebsd/lib/libnetbsd/: LICENSE  netbsd.c
freebsd/lib/libnetbsd/sys/arm/acpi/: cpu_acpi.c
freebsd/lib/libnetbsd/sys/arm/fdt/: acpi_fdt.c
freebsd/lib/libnetbsd/sys/dev/acpi/: acpi.c  acpi_cppc.c  acpi_pcc.c  acpi_pcd.c  acpi_power.c  acpi_resource.c  acpi_tz.c  acpi_util.c  acpi_util.h  acpica.h  acpivar.h
freebsd/lib/libnetbsd/sys/kern/: subr_autoconf.c  subr_device.c
freebsd/lib/libnetbsd/sys/lib/libkern/: pmatch.c  strlist.c
freebsd/lib/libnetbsd/sys/sys/: cpu.h  device.h  device_calls.h  device_if.h  device_impl.h
freebsd/sys/arm64/acpica/: OsdEnvironment.c  acpi_machdep.c
freebsd/sys/arm64/arm64/: autoconf.c  debug_monitor.c  gdb_machdep.c  nexus.c
freebsd/sys/arm64/include/: acpica_machdep.h
freebsd/sys/contrib/dev/acpica/include/platform/: acenv.h  aclibbsd.h
freebsd/sys/contrib/libfdt/: libfdt_env.h
freebsd/sys/dev/acpica/: acpi.c  acpi_package.c  acpi_resource.c  acpivar.h
freebsd/sys/dev/acpica/Osd/: OsdDebug.c  OsdHardware.c  OsdInterrupt.c  OsdMemory.c  OsdSchedule.c  OsdStream.c  OsdSynch.c  OsdTable.c
freebsd/sys/dev/fdt/: fdt_common.c  fdt_common.h  simplebus.c  simplebus.h
freebsd/sys/dev/ofw/: ofw_bus.h  ofw_bus_subr.c  ofw_bus_subr.h  ofw_fdt.c  ofw_pcib.c  ofw_subr.c  ofwbus.c  ofwvar.h  openfirm.c  openfirm.h
freebsd/sys/dev/pci/: pcib_private.h  pcivar.h
freebsd/sys/dev/uart/: uart_dbg.c
freebsd/sys/gdb/: gdb.h  gdb_int.h  gdb_main.c  gdb_packet.c
freebsd/sys/kern/: kern_linker.c  kern_module.c  subr_bus.c  subr_kdb.c  subr_kobj.c  subr_rman.c  subr_sbuf.c
freebsd/sys/libkern/: memmem.c  strchrnul.c
freebsd/sys/sys/: _bus_dma.h  bus.h  endian.h  kdb.h  kernel.h  linker_set.h  module.h  rman.h  sbuf.h  uuid.h
freebsd/usr.sbin/acpi/acpidump/: acpi.c  acpidump.c  acpidump.h
freebsd/usr.sbin/ofwdump/: ofw_util.c  ofw_util.h  ofwdump.c  ofwdump.h
osal/: bsd_osal_rtthread.c  bsd_osal_template.c
